[FIX] website_doc: js

--- a/website_doc/views/website_doc_toc_templates.xml
+++ b/website_doc/views/website_doc_toc_templates.xml
@@ -176,7 +176,7 @@
                 minLength: 3,
                 templates: {
                     suggestion: function(suggestion) {
-                    return '<span>' + suggestion._highlightResult.name.value + '</span><span> (' + suggestion._highlightResult.parent_id.value + ')</span>';
+                    return '<span>' + suggestion._highlightResult.name.value + '</span><span> (' + (suggestion._highlightResult.parent_id ? suggestion._highlightResult.parent_id.value : '') + ')</span>';
                     }
                 }
                 }
