--- a/account_multicurrency_ux/views/account_move_views.xml
+++ b/account_multicurrency_ux/views/account_move_views.xml
@@ -1,10 +1,10 @@
 <odoo>
 
-    <record id="no_create_invoice_tree" model="ir.ui.view">
-        <field name="name">account.document.invoice.tree</field>
-        <field name="model">account.invoice</field>
+    <record id="view_no_create_invoice_tree" model="ir.ui.view">
+        <field name="name">account.document.move.tree</field>
+        <field name="model">account.move</field>
         <field name="mode">primary</field>
-        <field name="inherit_id" ref="account.invoice_tree"/>
+        <field name="inherit_id" ref="account.view_invoice_tree"/>
         <field name="priority">100</field>
         <field name="arch" type="xml">
             <field name="company_id" position="attributes">
@@ -19,10 +19,10 @@
         </field>
     </record>
 
-    <record id="invoice_form" model="ir.ui.view">
-        <field name="name">account.invoice.form</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_form"/>
+    <record id="view_move_form" model="ir.ui.view">
+        <field name="name">account.move.form</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <form>
                 <field name="exchange_diff_adjustment_required" invisible="1"/>
@@ -44,31 +44,31 @@
             </header>
             <notebook>
                 <page string="NC/ND de ajuste" attrs="{'invisible': [('exchange_diff_invoice_ids', '=', [])]}">
-                    <field name="exchange_diff_invoice_ids" attrs="{'invisible': [('exchange_diff_invoice_ids', '=', False)]}" context="{'tree_view_ref': 'account_multicurrency_ux.no_create_invoice_tree', 'form_view_ref': 'account.invoice_form'}"/>
+                    <field name="exchange_diff_invoice_ids" attrs="{'invisible': [('exchange_diff_invoice_ids', '=', False)]}" context="{'tree_view_ref': 'account_multicurrency_ux.view_no_create_invoice_tree', 'form_view_ref': 'account.move_form'}"/>
                 </page>
             </notebook>
         </field>
     </record>
 
-    <record id="manager_invoice_form" model="ir.ui.view">
-        <field name="name">account.invoice.form</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="invoice_form"/>
+    <record id="view_manager_move_form" model="ir.ui.view">
+        <field name="name">account.move.form</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="view_move_form"/>
         <field name="groups_id" eval="[(4, ref('account.group_account_user'))]"/>
         <field name="arch" type="xml">
-            <field name="outstanding_credits_debits_widget" position="after">
+            <field name="invoice_outstanding_credits_debits_widget" position="after">
                 <button name="open_partial_reconciles" type="object" string="=> Ver conciliaciones" class="oe_link oe_nolabel" groups="base.group_no_one"/>
             </field>
         </field>
     </record>
 
-    <record id="view_invioce_filter" model="ir.ui.view">
-        <field name="name">invoice.view.select</field>
-        <field name="model">account.invoice</field>
+    <record id="view_account_invoice_filter" model="ir.ui.view">
+        <field name="name">move.view.select</field>
+        <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_account_invoice_filter"/>
         <field name="arch" type="xml">
             <separator position="after">
-                <filter name="exchange_diff_adjustment_required" domain="[('move_id.line_ids.matched_credit_ids.exchange_diff_adjustment_required', '=', True), ('move_id.line_ids.matched_credit_ids.credit_move_id.date_maturity', '&lt;=', context_today().strftime('%Y-%m-%d'))]" string="Requiere ajuste por diferencia de cambio" help='IMPORTANTE. No se muestran facturas pagadas con cheques (u otro medio) y que no han llegado a la fecha de cobro'/>
+                <filter name="exchange_diff_adjustment_required" domain="[('line_ids.matched_credit_ids.exchange_diff_adjustment_required', '=', True), ('line_ids.matched_credit_ids.credit_move_id.date_maturity', '&lt;=', context_today().strftime('%Y-%m-%d'))]" string="Requiere ajuste por diferencia de cambio" help='IMPORTANTE. No se muestran facturas pagadas con cheques (u otro medio) y que no han llegado a la fecha de cobro'/>
                 <filter name="exchange_diff_adjustment_required" domain="[('exchange_diff_adjustment_required','=',True)]" string="Requiere ajuste por diferencia de cambio (TODOS)" help='Si incluyen también las facturas que han sido pagadas con cheques (u otro medio) y para las cuales no hay llegado todavía la fecha de cobro' groups="base.group_no_one"/>
                 <filter name="exchange_diff_ignored" domain="[('exchange_diff_ignored','=',True)]" string="Ajuste por diferencia de cambio ignorado"/>
                 <separator/>
@@ -76,10 +76,10 @@
         </field>
     </record>
 
-    <record id="invoice_tree" model="ir.ui.view">
-        <field name="name">account.invoice.tree.inherit</field>
-        <field name="model">account.invoice</field>
-        <field name="inherit_id" ref="account.invoice_tree"/>
+    <record id="view_invoice_tree" model="ir.ui.view">
+        <field name="name">account.move.tree.inherit</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_invoice_tree"/>
         <field name="arch" type="xml">
             <tree>
                 <field name="exchange_diff_adjustment_required" invisible="1"/>
