--- a/account_multicurrency_ux/wizards/account_exchange_diff_invoice_views.xml
+++ b/account_multicurrency_ux/wizards/account_exchange_diff_invoice_views.xml
@@ -47,7 +47,7 @@
         <field name="res_model">account.exchange_diff_invoice</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
-        <field name="binding_model_id" ref="account.model_account_invoice"/>
+        <field name="binding_model_id" ref="account.model_account_move"/>
     </record>
 
 </odoo>
