--- a/helpdesk_ux/views/helpdesk_portal_templates.xml
+++ b/helpdesk_ux/views/helpdesk_portal_templates.xml
@@ -5,28 +5,30 @@
     </template>
     <template id="portal_tickets" name="Portal Tickets Inherit" inherit_id="helpdesk.portal_helpdesk_ticket">
         <t t-if="tickets" t-call="portal.portal_table" position="replace">
-            <t t-foreach="grouped_tickets" t-as="tickets">
-                  <table class="table table-hover o_portal_my_doc_table">
-                    <thead>
-                        <tr class="active">
-                            <th t-if="groupby == 'none'" class="col-md-9">Ticket Number</th>
-                            <th t-else="" class="col-md-9">Stage: <span t-field="tickets[0].sudo().stage_id.name"/></th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <t t-foreach="tickets" t-as="ticket">
-                        <tr>
-                            <td><a t-attf-href="/helpdesk/ticket/#{ticket.id}"><t t-esc="ticket.display_name"/></a></td>
-                            <td><span t-field="ticket.stage_id.name"/></td>
-                        </tr>
+            <t t-else="">
+                <t t-call="portal.portal_table">
+                    <t t-foreach="grouped_tickets" t-as="tickets">
+                        <thead>
+                            <tr t-attf-class="{{'thead-light' if not groupby == 'none' else ''}}">
+                                <th class="text-left">Ref</th>
+                                <th t-if="groupby == 'none'" class="w-100">Description</th>
+                                <th t-else="">
+                                    <em class="font-weight-normal text-muted">Tickets in stage:</em>
+                                    <span t-field="tickets[0].stage_id.name"/></th>
+                                <th/>
+                                <th t-if="groupby != 'stage'" class="text-center">Stage</th>
+                            </tr>
+                        </thead>
+                        <t t-foreach="tickets" t-as="ticket">
+                            <tr>
+                                <td class="text-left"><a t-attf-href="/helpdesk/ticket/#{ticket.id}"><small>#</small><t t-esc="ticket.id"/></a></td>
+                                <td><a t-attf-href="/helpdesk/ticket/#{ticket.id}"><span t-field="ticket.name"/></a></td><td/>
+                                <td t-if="groupby != 'stage'" class="text-center"><span class="badge badge-pill badge-info" t-field="ticket.stage_id.name"/></td>
+                            </tr>
+                        </t>
                     </t>
-                </table>
+                </t>
             </t>
-        </t>
-        <t t-foreach="grouped_tickets" t-as="tickets" position="after">
-            <div t-if="pager" class="o_portal_pager text-center">
-                <t t-call="portal.pager"/>
-            </div>
         </t>
     </template>
 </odoo>
