[13.0] [FIX] website_doc: Use article instead title when are in loop of articles

--- a/website_doc/views/website_doc_toc_templates.xml
+++ b/website_doc/views/website_doc_toc_templates.xml
@@ -11,8 +11,8 @@
             <li t-foreach="articles" t-as="article">
                 <!-- <a t-attf-href="/doc/#{slug(article)}" t-field="article.name"/> -->
                 <a t-att-href="article.url_suffix" t-field="article.name" target="_blank"/><span t-if="article.state == 'private'"> (privado)</span>
-                <t t-set="item" t-value="title"/>
-                    <t t-call="website_doc.backend_edit"/>
+                <t t-set="item" t-value="article"/>
+                <t t-call="website_doc.backend_edit"/>
             </li>
         </ul>
     </template>
