[IMP] website_sale_algolia_search: better expath

--- a/website_sale_algolia_search/views/shop_templates.xml
+++ b/website_sale_algolia_search/views/shop_templates.xml
@@ -2,7 +2,8 @@
 <odoo>
 
     <template id="search_box" name="Algolia Autocomplete Search box" inherit_id="website.website_search_box">
-        <xpath expr="//*[contains(@class,'input-group')]" position="after" >
+
+        <xpath expr="//input[@name='search']" position="after">
             <style>
                 .algolia-autocomplete {
                     width: 100%;
