--- a/helpdesk_solutions/views/helpdesk_stage_views.xml
+++ b/helpdesk_solutions/views/helpdesk_stage_views.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <field name="fold" position="after">
                 <field name="solution_required"/>
+                <field name="show_solution_on_portal"/>
             </field>
         </field>
     </record>
