--- a/sale_subscription_ux/views/sale_subscription_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_views.xml
@@ -25,6 +25,9 @@
             <field name="product_id" position="before">
                 <field name="sequence" widget="handle"/>
             </field>
+            <field name="code" position="after">
+                <field name="payment_term_id"/>
+            </field>
         </field>
     </record>
 
