--- a/account_online_sync_ar/views/account_journal_views.xml
+++ b/account_online_sync_ar/views/account_journal_views.xml
@@ -13,7 +13,7 @@
               <field name="account_online_provider_type"/>
             </field>
 
-            <t t-if="record.synchronization_status.value == 'SUCCESS'" position="before">
+            <t t-if="record.synchronization_status.value == 'SUCCESS'" position="inside">
                 <br/>
                 <span class="text-muted" t-if="(record.account_online_journal_id.value != '')" t-att-title="record.paybook_last_transaction.value">
                   Last: <t t-esc="record.paybook_last_transaction.value"/>
