[ADD] account_online_sync_ar: temporal fix button name
Update Credentials Odoo button in Provider account form view has a bad
spanish translation, we already ask Odoo to fix it but we need to wait.

Until then we have made a temporal change in order to be able to proper
show the translated value of the button to avoid confusion in our
customers.

NOTE: we tried to use i18n_extra but does not work

--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -9,6 +9,12 @@
             <xpath expr="//field[@name='status']" position="after">
                 <field name="action_required" attrs="{'invisible': [('provider_type', '!=', 'paybook')]}"/>
             </xpath>
+
+            <!-- Esto es solo para poder sobre escribir el nombre del boton ya que no pude usando i18n_extra -->
+            <button name="update_credentials" position="attributes">
+                <attribute name="string">Update Credential</attribute>
+            </button>
+
             <field name="next_refresh" position="after">
                 <field name="paybook_next_refresh"/>
             </field>
