[IMP] account_online_sync_ar: Be able to see both banks and digital wallets

--- a/account_online_sync_ar/views/templates.xml
+++ b/account_online_sync_ar/views/templates.xml
@@ -29,8 +29,8 @@
                             "country": "AR",
                         },
                         "navigation": {
-                            "hideAsideMenu": true,
-                        },
+                            "displaySiteOrganizationTypes": ['Bank', 'Digital Wallet'],
+                            "hideSelectCountry": ['Argentina'],                        },
                     }
                 };
                 syncWidget = new SyncWidget(params);
