--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -18,12 +18,12 @@
             <field name="next_refresh" position="after">
                 <field name="paybook_next_refresh"/>
             </field>
-            <field name="provider_type" position="after">
-                <div class="oe_link">
-                    <button name="action_paybook_force_sync" string="Force Sync" icon="fa-refresh" type="object" class="oe_link" groups="base.group_no_one"/>
-                    <button name="online_account_delete_credentials" string="Delete Online Credentials" confirm="This action can not be undone. Are you sure? This can affect any other database using the same credential" icon="fa-trash" type="object" class="oe_link" groups="base.group_no_one"/>
+            <notebook position="before">
+                <div attrs="{'invisible': [('provider_type', '!=', 'paybook')]}" groups="base.group_no_one">
+                    <button name="action_paybook_force_sync" string="Force Sync" icon="fa-refresh" type="object" class="oe_link"/>
+                    <button name="online_account_delete_credentials" string="Delete Online Credentials" confirm="This action can not be undone. Are you sure? This can affect any other database using the same credential" icon="fa-trash" type="object" class="oe_link"/>
                 </div>
-            </field>
+            </notebook>
         </field>
     </record>
 
