[ADD] account_online_sync_ar: Add button to update account list for an existing credential
If not new account to add/configure then we shoe the failed in the res
wizard but we do not change the provider status.

--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -20,6 +20,7 @@
             </field>
             <notebook position="before">
                 <div attrs="{'invisible': [('provider_type', '!=', 'paybook')]}" groups="base.group_no_one">
+                    <button name="action_paybook_update_accounts" string="Add new accounts" icon="fa-plus" type="object" class="oe_link"/>
                     <button name="action_paybook_force_sync" string="Force Sync" icon="fa-refresh" type="object" class="oe_link"/>
                     <button name="online_account_delete_credentials" string="Delete Online Credentials" confirm="This action can not be undone. Are you sure? This can affect any other database using the same credential" icon="fa-trash" type="object" class="oe_link"/>
                 </div>
