--- a/helpdesk_solutions/views/helpdesk_ticket_views.xml
+++ b/helpdesk_solutions/views/helpdesk_ticket_views.xml
@@ -19,7 +19,11 @@
         <field name="inherit_id" ref="helpdesk_timesheet.helpdesk_ticket_view_form_inherit_helpdesk_timesheet"/>
         <field name="arch" type="xml">
             <field name="email_cc" position="after">
-                <field name="helpdesk_solution_id" context="{'default_name':name,'default_solution_description': solution_description,'default_ticket_description':ticket_description}"/>
+                <label for="helpdesk_solution_id"/>
+                <div class="o_row">
+                    <field name="helpdesk_solution_id" context="{'default_name':name,'default_solution_description': solution_description,'default_ticket_description':ticket_description}"/>
+                    <button name="copy_solution" type="object" class="oe_link oe_read_only" attrs="{'invisible': [('helpdesk_solution_id', '=', False)]}" help="Overwrite the actual solution with the costumer solution of the linked solution" icon="fa-copy"/>
+                </div>
             </field>
             <xpath expr="//sheet/notebook/page[1]" position="before">
                 <page string="Description">
