--- a/sale_subscription_ux/views/sale_subscription_line_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_line_views.xml
@@ -25,9 +25,9 @@
             <search>
                 <field name="analytic_account_id"/>
                 <separator/>
-                <filter name="open" string="Running" domain="[('analytic_account_id.in_progress','=',True)]" help="Running Subscriptions"/>
+                <filter name="open" string="Running" domain="[('analytic_account_id.stage_category','=','progress')]" help="Running Subscriptions"/>
                 <filter name="pending" string="To Renew" domain="[('analytic_account_id.to_renew','=',True)]" help="Pending subscriptions"/>
-                <filter name="closed" string="Closed" domain="[('analytic_account_id.in_progress','=',False)]" help="Closed subscriptions"/>
+                <filter name="closed" string="Closed" domain="[('analytic_account_id.stage_category','=','closed')]" help="Closed subscriptions"/>
                 <separator/>
                 <filter name="product_id" string="Product" domain="[]" context="{'group_by' : 'product_id'}" />
                 <filter name="analytic_account_id" string="Subscription" domain="[]" context="{'group_by' : 'analytic_account_id'}" />
