--- a/helpdesk_solutions/views/helpdesk_templates.xml
+++ b/helpdesk_solutions/views/helpdesk_templates.xml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="helpdesk_followup_solution" inherit_id="helpdesk.tickets_followup" name="Helpdesk Solution" priority="100">
-
-        <xpath expr="//div[@t-field='ticket.description']/.." position="replace">
-            <div class='row'>
-                <div class="col-md-12">
-                    <strong>Description:</strong> <span t-field="ticket.ticket_description"/>
-                </div>
-            </div>
-            <div class="col-md-12">
-                <strong>Solution:</strong> <span  t-if="ticket.stage_id.show_solution_on_portal and ticket.solution_description != '&lt;p&gt;&lt;br&gt;&lt;/p&gt;'" t-field="ticket.solution_description"/> <span t-if="ticket.stage_id.show_solution_on_portal and not ticket.solution_description or ticket.solution_description == '&lt;p&gt;&lt;br&gt;&lt;/p&gt;'" t-field="ticket.helpdesk_solution_id.customer_solution_description"/>
-            </div>
-        </xpath>
-
+        <div t-field="ticket.description" position="attributes">
+            <attribute name="t-field">ticket.ticket_description</attribute>
+            <attribute name="t-if">not is_html_empty(ticket.ticket_description)</attribute>
+        </div>
     </template>
 </odoo>
