[FIX]sale_stock_renting_ux: default picking type required only on view
closes ingadhoc/enterprise-extensions#138

X-original-commit: 0cad83d9172ba98bf3ed28c653e94d0851f9b080
Signed-off-by: Nicolas Mac Rouillon <nmr@adhoc.com.ar>

--- a/sale_stock_renting_ux/views/res_config_settings.xml
+++ b/sale_stock_renting_ux/views/res_config_settings.xml
@@ -18,7 +18,7 @@
                             </div>
                             <div class="content-group" attrs="{'invisible': [('rental_create_picking','=',False)]}">
                                 <div class="mt8">
-                                    <field name="rental_picking_type_id" placeholder="Default Picking for rentals"/>
+                                    <field name="rental_picking_type_id" attrs="{'required': [('rental_create_picking', '=', True)]}" placeholder="Default Picking for rentals"/>
                                 </div>
                             </div>
                         </div>
