[FIX]sale_stock_renting_ux: fix return button on picking
closes ingadhoc/enterprise-extensions#140

X-original-commit: 4f40b04664fd7f1e0ce5a3292a3e100d976c8417
Signed-off-by: Nicolas Mac Rouillon <nmr@adhoc.com.ar>

--- a/sale_stock_renting_ux/views/stock_picking_views.xml
+++ b/sale_stock_renting_ux/views/stock_picking_views.xml
@@ -8,7 +8,7 @@
             <field name="immediate_transfer" position="after">
                 <field name="is_rental_picking" invisible="1"/>
             </field>
-            <xpath expr="//header//button[7]" position="attributes">
+            <xpath expr="//header//button[@name='%(stock.act_stock_return_picking)d']" position="attributes">
                 <attribute  name="attrs">
                         {'invisible': ['|','|', ('state', '!=', 'done'), ('is_locked', '=', False),('is_rental_picking','=',True)]}
                 </attribute>
