--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -22,6 +22,8 @@
                     <button name="action_paybook_update_state" string="Check Status" icon="fa-plus" type="object" class="oe_link"/>
                     <button name="action_paybook_update_accounts" string="Add/Configure accounts" icon="fa-plus" type="object" class="oe_link"/>
                     <button name="action_paybook_force_sync" string="Force Sync" icon="fa-refresh" type="object" class="oe_link"/>
+                    <button name="action_paybook_update_transactions" string="Update/Fix" icon="fa-wrench" type="object" class="oe_link" help="Update refreshed transactions, delete and disabled ones"/>
+                    (Last <field name="paybook_refresh_days"/> days)
                     <button name="online_account_delete_credentials" string="Delete Online Credentials" confirm="This action can not be undone. Are you sure? This can affect any other database using the same credential" icon="fa-trash" type="object" class="oe_link"/>
                 </div>
             </notebook>
