[IMP] account_online_sync_ar: show username hint
closes ingadhoc/enterprise-extensions#147

X-original-commit: 66006a33f3c492b369c2a678e2062afd8a6dc306
Related: ingadhoc/odoo-saas-adhoc#127
Signed-off-by: Juan José Scarafía <jjs@adhoc.com.ar>

--- a/account_online_sync_ar/views/account_online_provider_views.xml
+++ b/account_online_sync_ar/views/account_online_provider_views.xml
@@ -25,6 +25,9 @@
                     <button name="online_account_delete_credentials" string="Delete Online Credentials" confirm="This action can not be undone. Are you sure? This can affect any other database using the same credential" icon="fa-trash" type="object" class="oe_link"/>
                 </div>
             </notebook>
+            <field name="name" position="after">
+                <field name="paybook_username_hint"/>
+            </field>
         </field>
     </record>
 
